--- a/hahaton/src/pages/Reg/Reg.css
+++ b/hahaton/src/pages/Reg/Reg.css
@@ -18,7 +18,7 @@
     font-weight: 400;
     font-style: normal;
     margin: 90px auto;
-    width: 31%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,4 +30,25 @@
     font-weight: 700;
     letter-spacing: 0.15em;
     margin: 0;
+}
+
+.tab_list{
+    margin: 40px 0;
+    font-size: 24px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.tabs{
+    text-align: center;
+    border: none;
+    width: 240px;
+    outline: 0;
+}
+.tabs:hover{
+    background-color: #e5e5e580;
+    cursor: pointer;
+}
+
+.active-tabs  {
+    border-bottom: 5px solid #D9D9D9;
 }
